<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="com.company.andrzej.rolki.wroclawnarolkach.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black"
        android:foregroundGravity="center" />

    <Button
        android:id="@+id/wyjdz"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/opcje"
        android:layout_alignStart="@+id/opcje"
        android:layout_below="@+id/opcje"
        android:layout_marginTop="14dp"
        android:text="@string/wyjd" />

    <Button
        android:id="@+id/opcje"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pokaz_mapy"
        android:layout_alignStart="@+id/pokaz_mapy"
        android:layout_below="@+id/pokaz_mapy"
        android:layout_marginTop="14dp"
        android:text="@string/opcje" />

    <Button
        android:id="@+id/pokaz_mapy"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:text="@string/poka_mapy" />

    <Button
        android:id="@+id/dodaj_trase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="15dp"
        android:text="@string/dodaj_trase" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/wyjdz"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/wyjdz"
        android:layout_toEndOf="@+id/logo"
        android:layout_toRightOf="@+id/logo"
        ads:srcCompat="@drawable/smile_star" />

    <TextView
        android:id="@+id/text_ocen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView"
        android:layout_marginRight="@dimen/margin_5dp"
        android:layout_marginTop="@dimen/margin_5dp"
        android:text="@string/ocena"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_rate" />

</RelativeLayout>
